--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser": "^14.1.0",
         "@angular/platform-browser-dynamic": "^14.1.0",
         "@angular/router": "^14.1.0",
+        "@mirei/ts-collections": "^10.4.0",
         "luxon": "^3.0.1",
         "rxjs": "~7.5.6",
         "tslib": "^2.3.0",
