--- a/projects/mona-ui/package.json
+++ b/projects/mona-ui/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "mona-ui",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^14.1.0",
-    "@angular/core": "^14.1.0"
-  },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  }
+    "name": "mona-ui",
+    "version": "0.0.1",
+    "peerDependencies": {
+        "@angular/common": "^14.1.0",
+        "@angular/core": "^14.1.0",
+        "@mirei/ts-collections": "^10.4.0",
+        "luxon": "^3.0.1"
+    },
+    "dependencies": {
+        "tslib": "^2.3.0"
+    }
 }
