--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@angular-eslint/schematics": "^14.0.2",
         "@angular-eslint/template-parser": "^14.0.2",
         "@angular/cli": "~14.1.1",
+        "@fortawesome/fontawesome-free": "^6.1.1",
         "@angular/compiler-cli": "^14.1.0",
         "@ngneat/spectator": "^11.1.3",
         "@types/jasmine": "~4.0.0",
