--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
         "@angular-eslint/schematics": "^14.0.2",
         "@angular-eslint/template-parser": "^14.0.2",
         "@angular/cli": "~14.1.1",
-        "@fortawesome/fontawesome-free": "^6.1.1",
         "@angular/compiler-cli": "^14.1.0",
+        "@fortawesome/fontawesome-free": "^6.1.1",
         "@ngneat/spectator": "^11.1.3",
         "@types/jasmine": "~4.0.0",
         "@types/luxon": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^5.32.0",
         "@typescript-eslint/parser": "^5.32.0",
+        "autoprefixer": "^10.4.13",
         "jasmine-core": "~4.2.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
@@ -53,7 +54,10 @@
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
         "ng-packagr": "^14.1.0",
-        "prettier": "^2.7.1",
+        "postcss": "^8.4.20",
+        "prettier": "^2.8.1",
+        "prettier-plugin-tailwindcss": "^0.2.1",
+        "tailwindcss": "^3.2.4",
         "typescript": "~4.7.2"
     }
 }
