--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "luxon": "^3.2.1",
         "rxjs": "~7.5.6",
         "tslib": "^2.3.0",
+        "uuid": "^9.0.0",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
@@ -44,6 +45,7 @@
         "@ngneat/spectator": "^11.1.3",
         "@types/jasmine": "~4.0.0",
         "@types/luxon": "^3.2.0",
+        "@types/uuid": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^5.32.0",
         "@typescript-eslint/parser": "^5.32.0",
         "jasmine-core": "~4.2.0",
