--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,13 +23,14 @@
         "experimentalDecorators": true,
         "moduleResolution": "node",
         "importHelpers": true,
-        "target": "es2020",
+        "target": "ES2022",
         "module": "es2020",
         "lib": [
             "es2020",
             "dom"
         ],
-        "pretty": true
+        "pretty": true,
+        "useDefineForClassFields": false
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
