--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          node-version: 16
           fetch-depth: 0
 
       - name: Setup Node.js
@@ -22,7 +23,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Install semantic-release plugins
         run: npm install --save-dev @semantic-release/changelog @semantic-release/git
