--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/dist
 /tmp
 /out-tsc
 /bazel-out
@@ -40,3 +39,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+/dist/
