--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "sourceMap": true,
         "paths": {
             "mona-ui": [
-                "dist/mona-ui"
+                "dist/mona-ui/mona-ui",
+                "dist/mona-ui",
             ]
         },
         "declaration": false,
