fix: another attempt to fix the wrong export path

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
     "name": "@mirei/mona-ui",
     "version": "1.0.1",
     "description": "A very light Angular UI framework",
+    "main": "dist/mona-ui/fesm2015/mona-ui.mjs",
+    "exports": {
+        ".": "./dist/mona-ui/fesm2015/mona-ui.mjs"
+    },
+    "typings": "dist/mona-ui/index.d.ts",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
