--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
+        "eslint": "^8.47.0",
         "jasmine-core": "~4.2.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
