--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Install semantic-release plugins
         run: npm install --save-dev @semantic-release/changelog @semantic-release/git --legacy-peer-deps
 
-#      - name: Test
-#        run: npm run test
+      - name: Test
+        run: npm run test
 
       - name: Build
         run: npm run build:prod
