--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "build:prod": "ng build mona-ui --configuration production",
         "build:watch": "ng build mona-ui --watch --configuration development",
         "watch": "ng build mona-ui --watch --configuration development",
-        "test": "ng test"
+        "test:lib": "ng test mona-ui",
+        "test:app": "ng test mona-ui-tester"
     },
     "author": "Lumine",
     "files": [
