--- a/angular.json
+++ b/angular.json
@@ -122,10 +122,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                            "browserTarget": "mona-ui-tester:build:production"
+                          "buildTarget": "mona-ui-tester:build:production"
                         },
                         "development": {
-                            "browserTarget": "mona-ui-tester:build:development"
+                          "buildTarget": "mona-ui-tester:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -133,7 +133,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "mona-ui-tester:build"
+                      "buildTarget": "mona-ui-tester:build"
                     }
                 },
                 "test": {
