--- a/angular.json
+++ b/angular.json
@@ -65,12 +65,15 @@
             "prefix": "app",
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-devkit/build-angular:application",
                     "options": {
-                        "outputPath": "dist/mona-ui-tester",
+                        "outputPath": {
+                          "base": "dist/mona-ui-tester"
+                        },
                         "index": "projects/mona-ui-tester/src/index.html",
-                        "main": "projects/mona-ui-tester/src/main.ts",
-                        "polyfills": "projects/mona-ui-tester/src/polyfills.ts",
+                        "polyfills": [
+                          "projects/mona-ui-tester/src/polyfills.ts"
+                        ],
                         "tsConfig": "projects/mona-ui-tester/tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
@@ -83,7 +86,8 @@
                         ],
                         "scripts": [
                             "node_modules/@fortawesome/fontawesome-free/js/all.js"
-                        ]
+                        ],
+                        "browser": "projects/mona-ui-tester/src/main.ts"
                     },
                     "configurations": {
                         "production": {
@@ -108,9 +112,7 @@
                             "outputHashing": "all"
                         },
                         "development": {
-                            "buildOptimizer": false,
-                            "optimization": false,
-                            "vendorChunk": true,
+                          "optimization": false,
                             "extractLicenses": false,
                             "sourceMap": true,
                             "namedChunks": true
