--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@mirei/ts-collections": "^14.0.2",
+        "@tiptap/core": "^2.4.0",
+        "@tiptap/extension-underline": "^2.4.0",
+        "@tiptap/pm": "^2.4.0",
+        "@tiptap/starter-kit": "^2.4.0",
         "luxon": "^3.4.4",
         "rxjs": "~7.8.1",
         "tslib": "^2.6.2",
