--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@mirei/ts-collections": "^14.0.2",
         "@tiptap/core": "^2.4.0",
+        "@tiptap/extension-color": "^2.4.0",
         "@tiptap/extension-subscript": "^2.4.0",
         "@tiptap/extension-superscript": "^2.4.0",
         "@tiptap/extension-text-align": "^2.4.0",
+        "@tiptap/extension-text-style": "^2.4.0",
         "@tiptap/extension-underline": "^2.4.0",
         "@tiptap/pm": "^2.4.0",
         "@tiptap/starter-kit": "^2.4.0",
