--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@mirei/ts-collections": "^14.0.2",
         "@tiptap/core": "^2.4.0",
         "@tiptap/extension-color": "^2.4.0",
+        "@tiptap/extension-highlight": "^2.4.0",
         "@tiptap/extension-subscript": "^2.4.0",
         "@tiptap/extension-superscript": "^2.4.0",
         "@tiptap/extension-text-align": "^2.4.0",
