--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
         "@tiptap/extension-link": "^2.4.0",
         "@tiptap/extension-subscript": "^2.4.0",
         "@tiptap/extension-superscript": "^2.4.0",
+        "@tiptap/extension-task-item": "^2.4.0",
+        "@tiptap/extension-task-list": "^2.4.0",
         "@tiptap/extension-text-align": "^2.4.0",
         "@tiptap/extension-text-style": "^2.4.0",
         "@tiptap/extension-underline": "^2.4.0",
