--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@tiptap/extension-color": "^2.4.0",
         "@tiptap/extension-font-family": "^2.4.0",
         "@tiptap/extension-highlight": "^2.4.0",
+        "@tiptap/extension-image": "^2.4.0",
         "@tiptap/extension-link": "^2.4.0",
         "@tiptap/extension-subscript": "^2.4.0",
         "@tiptap/extension-superscript": "^2.4.0",
@@ -73,6 +74,7 @@
         "@tiptap/pm": "^2.4.0",
         "@tiptap/starter-kit": "^2.4.0",
         "luxon": "^3.4.4",
+        "remixicon": "^4.2.0",
         "rxjs": "~7.8.1",
         "tslib": "^2.6.2",
         "uuid": "^9.0.1",
