--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
         "@angular-eslint/template-parser": "^18.3.0",
         "@angular/cli": "~18.2.0",
         "@angular/compiler-cli": "^18.2.0",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.10.0",
         "@fortawesome/fontawesome-free": "^6.5.2",
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/git": "^10.0.1",
