--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
     "description": "A very light Angular UI framework",
     "main": "dist/mona-ui/fesm2022/mona-ui.mjs",
     "exports": {
-        ".": "./dist/mona-ui/fesm2022/mona-ui.mjs"
+        ".": {
+            "types": "./dist/mona-ui/index.d.ts",
+            "import": "./dist/mona-ui/fesm2022/mona-ui.mjs",
+            "sass": [
+                "./styles/kafka.scss",
+                "./styles/mona.scss"
+            ]
+        }
     },
     "typings": "dist/mona-ui/index.d.ts",
     "scripts": {
@@ -44,73 +51,73 @@
         ]
     },
     "dependencies": {
-        "@angular/animations": "^18.2.0",
-        "@angular/cdk": "^18.2.0",
-        "@angular/common": "^18.2.0",
-        "@angular/compiler": "^18.2.0",
-        "@angular/core": "^18.2.0",
-        "@angular/forms": "^18.2.0",
-        "@angular/platform-browser": "^18.2.0",
-        "@angular/platform-browser-dynamic": "^18.2.0",
-        "@angular/router": "^18.2.0",
+        "@angular/animations": "^18.2.6",
+        "@angular/cdk": "^18.2.6",
+        "@angular/common": "^18.2.6",
+        "@angular/compiler": "^18.2.6",
+        "@angular/core": "^18.2.6",
+        "@angular/forms": "^18.2.6",
+        "@angular/platform-browser": "^18.2.6",
+        "@angular/platform-browser-dynamic": "^18.2.6",
+        "@angular/router": "^18.2.6",
         "@fortawesome/angular-fontawesome": "^0.15.0",
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
-        "@mirei/ts-collections": "^14.3.5",
-        "@tiptap/core": "^2.6.4",
-        "@tiptap/extension-color": "^2.6.4",
-        "@tiptap/extension-font-family": "^2.6.4",
-        "@tiptap/extension-highlight": "^2.6.4",
-        "@tiptap/extension-image": "^2.6.4",
-        "@tiptap/extension-link": "^2.6.4",
-        "@tiptap/extension-subscript": "^2.6.4",
-        "@tiptap/extension-superscript": "^2.6.4",
-        "@tiptap/extension-table": "^2.6.4",
-        "@tiptap/extension-table-cell": "^2.6.4",
-        "@tiptap/extension-table-header": "^2.6.4",
-        "@tiptap/extension-table-row": "^2.6.4",
-        "@tiptap/extension-task-item": "^2.6.4",
-        "@tiptap/extension-task-list": "^2.6.4",
-        "@tiptap/extension-text-align": "^2.6.4",
-        "@tiptap/extension-text-style": "^2.6.4",
-        "@tiptap/extension-underline": "^2.6.4",
-        "@tiptap/pm": "^2.6.4",
-        "@tiptap/starter-kit": "^2.6.4",
-        "luxon": "^3.4.4",
+        "@mirei/ts-collections": "^14.4.1",
+        "@tiptap/core": "^2.7.4",
+        "@tiptap/extension-color": "^2.7.4",
+        "@tiptap/extension-font-family": "^2.7.4",
+        "@tiptap/extension-highlight": "^2.7.4",
+        "@tiptap/extension-image": "^2.7.4",
+        "@tiptap/extension-link": "^2.7.4",
+        "@tiptap/extension-subscript": "^2.7.4",
+        "@tiptap/extension-superscript": "^2.7.4",
+        "@tiptap/extension-table": "^2.7.4",
+        "@tiptap/extension-table-cell": "^2.7.4",
+        "@tiptap/extension-table-header": "^2.7.4",
+        "@tiptap/extension-table-row": "^2.7.4",
+        "@tiptap/extension-task-item": "^2.7.4",
+        "@tiptap/extension-task-list": "^2.7.4",
+        "@tiptap/extension-text-align": "^2.7.4",
+        "@tiptap/extension-text-style": "^2.7.4",
+        "@tiptap/extension-underline": "^2.7.4",
+        "@tiptap/pm": "^2.7.4",
+        "@tiptap/starter-kit": "^2.7.4",
+        "luxon": "^3.5.0",
         "remixicon": "^4.3.0",
         "rxjs": "~7.8.1",
-        "tslib": "^2.6.3",
+        "tslib": "^2.7.0",
         "uuid": "^10.0.0",
-        "zone.js": "~0.14.10"
+        "zone.js": "~0.15.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.2.0",
-        "@angular-eslint/builder": "^18.3.0",
-        "@angular-eslint/eslint-plugin": "^18.3.0",
-        "@angular-eslint/eslint-plugin-template": "^18.3.0",
-        "@angular-eslint/schematics": "^18.3.0",
-        "@angular-eslint/template-parser": "^18.3.0",
-        "@angular/cli": "~18.2.0",
-        "@angular/compiler-cli": "^18.2.0",
+        "@angular-devkit/build-angular": "^18.2.6",
+        "@angular-eslint/builder": "^18.3.1",
+        "@angular-eslint/eslint-plugin": "^18.3.1",
+        "@angular-eslint/eslint-plugin-template": "^18.3.1",
+        "@angular-eslint/schematics": "^18.3.1",
+        "@angular-eslint/template-parser": "^18.3.1",
+        "@angular/cli": "~18.2.6",
+        "@angular/compiler-cli": "^18.2.6",
         "@eslint/eslintrc": "^3.1.0",
-        "@eslint/js": "^9.10.0",
-        "@fortawesome/fontawesome-free": "^6.5.2",
+        "@eslint/js": "^9.11.1",
+        "@fortawesome/fontawesome-free": "^6.6.0",
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/git": "^10.0.1",
         "@types/jasmine": "~5.1.4",
         "@types/luxon": "^3.4.2",
         "@types/uuid": "^10.0.0",
-        "@typescript-eslint/eslint-plugin": "^8.1.0",
-        "@typescript-eslint/parser": "^8.1.0",
-        "eslint": "^9.9.0",
-        "jasmine-core": "~5.2.0",
+        "@typescript-eslint/eslint-plugin": "^8.7.0",
+        "@typescript-eslint/parser": "^8.7.0",
+        "eslint": "^9.11.1",
+        "jasmine-core": "~5.3.0",
         "karma": "~6.4.4",
         "karma-chrome-launcher": "~3.2.0",
         "karma-coverage": "~2.2.1",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
-        "ng-packagr": "^18.2.0",
+        "ng-packagr": "^18.2.1",
         "prettier": "^3.3.3",
-        "typescript": "^5.5.4"
+        "typescript": "~5.5.4"
     }
 }
