--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,24 @@
     "compileOnSave": false,
     "compilerOptions": {
         "baseUrl": "./",
-        "outDir": "./dist/out-tsc",
-        "forceConsistentCasingInFileNames": true,
+        "declaration": false,
         "esModuleInterop": true,
-        "strict": true,
-        "noImplicitOverride": true,
-        "noPropertyAccessFromIndexSignature": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "noImplicitReturns": true,
+        "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
+        "importHelpers": true,
+        "lib": [
+            "ES2022",
+            "dom"
+        ],
+        "module": "es2020",
+        "moduleResolution": "node",
         "noFallthroughCasesInSwitch": true,
-        "sourceMap": true,
+        "noImplicitAny": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "outDir": "./dist/out-tsc",
         "paths": {
             "mona-ui": [
                 "projects/mona-ui/src/lib"
@@ -22,17 +29,11 @@
                 "projects/mona-ui/src/lib/*"
             ]
         },
-        "declaration": false,
-        "experimentalDecorators": true,
-        "moduleResolution": "node",
-        "importHelpers": true,
-        "target": "ES2022",
-        "module": "es2020",
-        "lib": [
-            "ES2022",
-            "dom"
-        ],
         "pretty": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "target": "ES2022",
         "useDefineForClassFields": false
     },
     "angularCompilerOptions": {
